<resources>
    <string name="app_name">prova</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="signInWithFacebook">Sign in with Facebook</string>
    <string name="signInWithGoogle">Sign in with Google</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="dontHaveAccount">Don\'t have an account?</string>
    <string name="createOne">Create one</string>
    <string name="freeDesk">LIBERAR MESA</string>
    <string name="saveOp">SALVAR OPERACAO</string>
    <string name="reserveAll">RESERVAR TODAS AS MESAS</string>
    <string name="deskNumber">Numero Mesa</string>
    <string name="pref_key">pref</string>pref_key
</resources>