<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="50dp"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivImage"
        android:layout_height="wrap_content"
        android:layout_weight="@android:integer/config_shortAnimTime"
        android:layout_width="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/username"
        android:ems="10"
        android:inputType="text"
    />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        />
    <Button
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/signin"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:background="@color/colorButton"
        android:layout_marginBottom="10dp"
        android:onClick="sendMessage"
    />

    <Button
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground"
    android:hint="@string/forgotPassword"
    android:textColorHint="@color/colorButton"
    />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonFade"
        android:hint="@string/signInWithFacebook"
        android:layout_marginBottom="10dp"
        android:textColorHint="@color/colorButton"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonFadeRed"
        android:hint="@string/signInWithGoogle"
        android:textColorHint="@color/colorRed"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal"
        >
        <TextView

            android:textAlignment="center"
            android:textSize="15dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="30dp"
            android:text="@string/dontHaveAccount"/>
        <Button
            android:layout_marginLeft="-52dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:hint="@string/createOne"
            android:textColorHint="@color/colorButton"
            />
    </LinearLayout>
</LinearLayout>