<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="60dp"
    android:layout_height="match_parent"
    tools:context=".Reserves"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="4dp"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lreserve1"
            android:onClick="reserve1"
            android:background="@color/colorButton"
            android:layout_marginRight="4dp"
            android:weightSum="2"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30dp" />
            <Button
                android:layout_marginTop="6dp"
                android:id="@+id/reserve1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reservar"
                android:textColorHint="@android:color/background_dark"
                android:layout_weight="1"
                android:onClick="reserve1"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_marginRight="4dp"
            android:id="@+id/lreserve2"
            android:onClick="reserve2"
            android:layout_width="wrap_content"
            android:weightSum="2"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorButton"
            >
            <TextView

                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="2"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30dp" />
            <Button
                android:layout_marginTop="6dp"
                android:id="@+id/reserve2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reservar"
                android:textColorHint="@android:color/background_dark"
                android:layout_weight="1"
                android:onClick="reserve2"
                />
        </LinearLayout>
        <LinearLayout  android:id="@+id/lreserve3"

            android:onClick="reserve3"
            android:weightSum="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:orientation="vertical"
           >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="3"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30dp" />
            <Button
                android:layout_marginTop="6dp"
                android:id="@+id/reserve3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reservar"
                android:textColorHint="@android:color/background_dark"
                android:layout_weight="1"
                android:onClick="reserve3"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
       android:layout_marginBottom="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        android:weightSum="2"
        <LinearLayout
            android:layout_marginRight="4dp"
            android:id="@+id/lreserve4"
            android:onClick="reserve4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorButton"
          >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="4"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30dp" />
            <Button
                android:layout_marginTop="6dp"
                android:id="@+id/reserve4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reservar"
                android:textColorHint="@android:color/background_dark"
                android:layout_weight="1"
                android:onClick="reserve4"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="4dp"
            android:id="@+id/lreserve5"
            android:onClick="reserve6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorButton"

            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="5"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30dp" />
            <Button
                android:layout_marginTop="6dp"
                android:id="@+id/reserve5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reservar"
                android:textColorHint="@android:color/background_dark"
                android:layout_weight="1"
                android:onClick="reserve5"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/lreserve6"
            android:onClick="reserve6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:orientation="vertical"

            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="6"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30dp" />
            <Button
                android:layout_marginTop="6dp"
                android:id="@+id/reserve6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reservar"
                android:textColorHint="@android:color/background_dark"
                android:layout_weight="1"
                android:onClick="reserve6"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginRight="4dp"
            android:id="@+id/lreserve7"
            android:onClick="reserve7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorButton"

            android:weightSum="2">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="7"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30dp" />
            <Button
                android:layout_marginTop="6dp"
                android:id="@+id/reserve7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reservar"
                android:textColorHint="@android:color/background_dark"
                android:layout_weight="1"
                android:onClick="reserve7"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginRight="4dp"
            android:id="@+id/lreserve8"
            android:onClick="reserve8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorButton"
            android:orientation="vertical"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="8"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30dp" />
            <Button
                android:layout_marginTop="6dp"
                android:id="@+id/reserve8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reservar"
                android:textColorHint="@android:color/background_dark"
                android:layout_weight="1"
                android:onClick="reserve8"
                />
        </LinearLayout>
        <LinearLayout

            android:id="@+id/lreserve9"
            android:onClick="reserve9"
            android:orientation="vertical"
            android:background="@color/colorButton"
            android:layout_width="wrap_content"
            android:weightSum="2"
            android:layout_height="wrap_content"
           >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:text="9"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="30dp" />
            <Button
                android:layout_marginTop="6dp"
                android:id="@+id/reserve9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Reservar"
                android:textColorHint="@android:color/background_dark"
                android:layout_weight="1"
                android:onClick="reserve9"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="0dp">
        <EditText
            android:id="@+id/deskNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deskNumber"
            android:layout_weight="0.9"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/freeDesk"
            android:textColorHint="@android:color/background_dark"
            android:layout_weight="1"
            android:onClick="freeDesk"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="saveOp"
        android:hint="@string/saveOp"
        android:textColorHint="@android:color/background_dark" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="reserveAll"
        android:hint="@string/reserveAll"
        android:textColorHint="@android:color/background_dark"
        />

</LinearLayout>